@@ -5,24 +5,40 @@ import com.chocobi.leafy.place.common.dto.UserPlaceDTO;
 import com.chocobi.leafy.place.entity.Category;
 import com.chocobi.leafy.place.entity.Place;
 import com.chocobi.leafy.place.entity.PlaceSourceType;
+import com.chocobi.leafy.place.entity.RegionGroup;
 import com.chocobi.leafy.place.repository.PlaceRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class PlaceService {
     private final PlaceRepository placeRepository;
 
-    public List<PlaceDTO> getPlaceByAddress(String address) {
-        List<Place> places = placeRepository.findByAddressContaining(address);
+    public List<PlaceDTO> getPlacesByArrival(String arrival) {
+        RegionGroup group = RegionGroup.fromRegionName(arrival);
+        List<Place> places = placeRepository.findByRegionGroupAndSourceType(group, PlaceSourceType.API);
         return places.stream()
                 .map(PlaceDTO::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    public Place getPlaceById(Long id) {
+        if (id == null) {
+            return null;
+        }
+        Optional<Place> place = placeRepository.findById(id);
+        return place.orElse(null);
+    }
+
+    public List<PlaceDTO> getPlaceBySourceType(PlaceSourceType sourceType) {
+        List<Place> places = placeRepository.findBySourceType(sourceType);
+        return places.stream()
+                .map(PlaceDTO::fromEntity)
+                .toList();
     }
 
     public Long saveUserPlace(UserPlaceDTO userPlaceDTO) {
@@ -30,9 +46,15 @@ public class PlaceService {
             return placeRepository.findByAddressAndTitle(userPlaceDTO.getAddress(), userPlaceDTO.getTitle()).getId();
         }
 
+        String[] parts = userPlaceDTO.getAddress().split(" ");
+        RegionGroup group = RegionGroup.fromRegionName(parts[0]);
+        String regionDetail = parts[1];
+
         return placeRepository.save(Place.builder()
                 .title(userPlaceDTO.getTitle())
                 .address(userPlaceDTO.getAddress())
+                .regionGroup(group)
+                .regionDetail(regionDetail)
                 .longitude(userPlaceDTO.getLongitude())
                 .latitude(userPlaceDTO.getLatitude())
                 .tel(userPlaceDTO.getTel())
@@ -41,10 +63,5 @@ public class PlaceService {
                 .copyright("카카오지도")
                 .category(Category.ETC)
                 .build()).getId();
-    }
-
-    public Place getPlaceById(Long id) {
-        Optional<Place> place = placeRepository.findById(id);
-        return place.orElse(null);
     }
 }
